Tracken, ob auf Bilder geklickt wird
Weil da eigentlich mal ne Lightbox eingebaut werden sollte, wenn Bedarf
ist.

--- a/src/template.html
+++ b/src/template.html
@@ -26,6 +26,9 @@
 
   ga('create', 'UA-51118148-1', 'timweber.name');
   ga('send', 'pageview');
+  jQuery('img').click(function () {
+    ga('send', 'event', 'scylec', 'imgClick', jQuery(this).is('html.scylec-text *') ? 'text' : 'presentation');
+  });
 </script>
 
 </body>
